--- a/doc/.gitignore
+++ b/doc/.gitignore
@@ -1,6 +1,10 @@
-bare_jrnl_compsoc.log
-bare_jrnl_compsoc.bbl
-bare_jrnl_compsoc.blg
-bare_jrnl_compsoc.aux
-bare_jrnl_compsoc.pdf
-bare_jrnl_compsoc.synctex.gz
+cp2019-20_project_47590_48425.log
+cp2019-20_project_47590_48425.bbl
+cp2019-20_project_47590_48425.blg
+cp2019-20_project_47590_48425.aux
+cp2019-20_project_47590_48425.pdf
+cp2019-20_project_47590_48425.synctex.gz
+cp2019-20_project_47590_48425.toc
+texput.log
+cp2019-20_project_47590_48425.run.xml
+cp2019-20_project_47590_48425.bcf
